--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.6",
-    "@tanstack/react-query": "^4.29.5",
-    "@tanstack/react-query-devtools": "^4.29.6",
-    "axios": "^1.6.5",
-    "brazilian-values": "^0.13.0",
-    "formik": "^2.4.5",   
-    "yup": "^1.3.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "typescript": "^5"
-  }
+    "name": "vendinha-plena",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.15.6",
+        "@tanstack/react-query": "^4.29.5",
+        "@tanstack/react-query-devtools": "^4.29.6",
+        "axios": "^1.6.5",
+        "brazilian-values": "^0.13.0",
+        "formik": "^2.4.5",
+        "next": "14.1.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "yup": "^1.3.3"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "prettier": "^3.2.4",
+        "typescript": "^5"
+    }
 }
