--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "@/*": ["./src/*"]
       }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/ClientDetails"],
     "exclude": ["node_modules"]
   }
   
